# normativos_cnj

./: .env.example  EDA.ipynb  Proposta de um Banco de Dados Vetorial para a Análise Semântica de Atos Normativos do Conselho Nacional de Justiça.docx  README.md  debug.py  env.example  etl.py  etl_colab.py  evaluate.py  evaluate_rerank.py  main.py  pyproject.toml  requirements.txt  silver_set.py  silver_set_normativos_cnj.json
evaluation_results/: evaluation_all_ranks.csv  evaluation_detailed_results.csv  evaluation_summary.csv
evaluation_results_reranked/: evaluation_all_ranks_reranked.csv  evaluation_detailed_results_reranked.csv  evaluation_summary_reranked.csv
src/: __init__.py
src/normativos_cnj/: __init__.py  config.py  database.py  embeddings.py  scraper.py  text_processing.py
